# SecProj

./: CMakeLists.txt
benchmark/: README.md
docs/: BranchAnalyzer.md  ClassDiagram.md  DFA.md  README.md  VariableAnayzer.md
include/DetectMe/: Expression.h  OperationDetection.h
include/P2A/: PointToAnalysis.h
include/checkers/: PREDEFINEDFUNCTIONS.def  RedundantFunctionCallInLoopChecker.h  TemplateChecker.h
include/framework/: ASTManager.h  Config.h
lib/: CMakeLists.txt
lib/DetectMe/: CMakeLists.txt  Expression.cpp  OperationDetection.cpp
lib/P2A/: PointToAnalysis.cpp  PointToAnalysisAlg.cpp
lib/checkers/: CMakeLists.txt  RedundantFunctionCallInLoopChecker.cpp  TemplateChecker.cpp
lib/framework/: ASTManager.cpp  CallGraph.cpp  Config.cpp
tests/: README.md  config.txt
tests/AlignCacheline/: README.md  example.cpp
tests/BranchChecker/: README.md  example.cpp
tests/CPUOutOfOrderExecution/: README.md  config.txt  example.cpp
tests/DataLayoutChecker/: README.md  astList.txt  config.txt  example.c
tests/ExpensiveOperationChecker/: README.md  config.txt  example.cpp
tests/FakeCachelineShare/: README.md  example.cpp
tests/FrequentProcessSwitchChecker/: README.md  config.txt  example.cpp
tests/FunctionCallChecker/: README.md  example.cpp
tests/HugeMemory/: README.md  example.c
tests/LockGranularityChecker/: README.md  config.txt  example.cpp
tests/MemoryLeakChecker/: DoubleFreeDemo.c  MemoryLeakdemo.c  README.md  example.cpp  example1.c
tests/MemoryRewriteChecker/: README.md  config.txt  (+2 more)
tools/TemplateChecker/: CMakeLists.txt  main.cpp
(+17 files in other folders)
